--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "test": "ng serve",
-    "start": "ng serve --no-live-reload --host=0.0.0.0 --disable-host-check --ssl --port 80",
+    "start": "ng serve",
+    "prod": "ng serve --no-live-reload --host=0.0.0.0 --disable-host-check --ssl --port 443",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
