--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^16.2.10",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "aws-sdk": "^2.1483.0",
     "bootstrap": "^5.3.2",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
