--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "aws-sdk": "^2.1483.0",
     "bootstrap": "^5.3.2",
+    "ngx-cookie-service": "^19.1.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
